# edg-acoustics

./: .bumpversion.cfg  .gitattributes  .gitignore  .prospector.yml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.dev.md  README.md  README.md.backup  environment.yml  next_steps.md  project_setup.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.githooks/: pre-commit
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml  cffconvert.yml  documentation.yml  markdown-link-check.yml
data/tests/mesh/: CoarseMesh.msh  CoarseMesh_connectivity.npz  coarse_cube_room.msh  coarse_cube_room2.msh
docs/: Makefile  conf.py  custom.css  index.rst  make.bat  requirements.txt  usage_guide.md
edg_acoustics/: DGinterface.py  __init__.py  acoustics_simulation.py  boundary_condition.py  initial_condition.py  mesh.py  my_module.py  postprocessing.py  preprocessing.py  time_integration.py
examples/: ex_01.py  ex_02.py
examples/material_fit/: CoeffByVF.m
examples/scenario1/: CoeffByVF.m  Tcoarse_test_time1029N4NT30.9.mat  carpet_N5_Fmax3000.mat  main.py  main_HF.py  panel_N3_Fmax3000.mat  results_on_the_run.mat  scenario1_coarser.msh  scenario_2_coarse.geo  scenario_2_coarse.msh  scenario_2_coarser.geo  scenario_2_fine.geo
examples/scenario2/: Corridor.geo  Corridor.msh  main.py
tests/: numpy_array_test.py  session_test_memory.py  test_acoustics_simulation.py  test_mesh.py  test_my_module.py  test_speed.py  test_speed_general.py  utility_function.py
