[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["edg_acoustics"]
command_line = "-m pytest"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37,py38,py39
skip_missing_interpreters = true
[testenv]
commands = pytest
extras = dev
"""

[tool.pylint.parameter_documentation]
accept-no-param-doc = true

accept-no-raise-doc = true

accept-no-return-doc = true

accept-no-yields-doc = true

# Possible choices: ['sphinx', 'epytext', 'google', 'numpy', 'default']
default-docstring-type = "google"