# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Huiqing Wang
author_email = h.wang6@tue.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = DG room acoustic modeling package
keywords =
    DG
    room acoustic modeling
long_description = file: README.md
long_description_content_type = text/markdown
name = edg_acoustics
project_urls =
    Bug Tracker = https://github.com/EDG-Acoustics/edg-acoustics/issues
url = https://github.com/EDG-Acoustics/edg-acoustics
version = 0.1.0

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector[with_pyroma]
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
publishing =
    twine
    wheel

[options.packages.find]
include = edg_acoustics, edg_acoustics.*

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = edg_acoustics
src_paths = edg_acoustics,tests
line_length = 120
