# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Huiqing Wang, Artur Palha
author_email = h.wang6@tue.nl, A.Palha@tudelft.nl
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
description = Wave-based room acoustic modeling package with the DG method
keywords =
    DG
    room acoustic modeling
    wave-based
    finite element method
    high-order
    acoustics
    impulse response
    room acoustics
    discontinuous Galerkin
        
long_description = file: README.md
long_description_content_type = text/markdown
name = DG_RoomAcoustics
project_urls =
    Bug Tracker = https://github.com/Building-acoustics-TU-Eindhoven/edg-acoustics/issues
url = https://github.com/Building-acoustics-TU-Eindhoven/edg-acoustics
version = "2024.04"

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
    meshio >= 5.3.4
    modepy == 2021.1
    scipy

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

#[options.extras_require]
#dev =
#    sphinx
#    sphinx_rtd_theme
#    sphinx-autoapi
#    myst_parser
publishing =
    twine
    wheel

[options.packages.find]
include = edg_acoustics, edg_acoustics.*

